--- a/src/static/css/login.css
+++ b/src/static/css/login.css
@@ -12,6 +12,9 @@ body {
   align-items: center;
   background-color: #f5f5f5;
 }
+.wimg{
+  margin-top: -150px;
+}
 .menuLogo{
   color: #2b2b2b;
 }
@@ -20,6 +23,11 @@ body {
   background-color: #f5f5f5 !important;
 }
 
+.nav-item.disabled{
+  border-color: #b7b7b7;
+  box-shadow: none;
+  color: #898989
+}
 .nav-item{
   background-color: #f5f5f5;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -31,7 +39,9 @@ body {
   box-shadow: rgba(99, 99, 99, 0.9) 0px 2px 8px 0px;
   transition: 0.5s;
 }
-
+.modal-footer{
+  border-top: 0px;
+}
 .logout{
   width: 100%;
 }
@@ -42,6 +52,10 @@ body {
 
 .upList>:last-child{
   margin-top: auto !important;
+}
+
+.centerList{
+  margin:auto 0px;
 }
 
 .form-signin {
