--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -171,7 +171,7 @@
               <input class="form-control middle" id="direccion" name="cosecha" placeholder="Dic-Mar 2022" required="required">
               <label for="floatingInput">Cosecha</label>
             </div>
-            <div class="form-floating mb-3">
+            <div class="form-floating">
               <select id="rol" class="form-control bottom" name="rol">
                 <option value="0">Analista de Compra</option>
                 <option value="1">Administrador</option>
@@ -217,7 +217,7 @@
               <input class="form-control middle"  name="editcosecha" placeholder="Dic-Mar 2022" required="required">
               <label for="floatingInput">Cosecha</label>
             </div>
-            <div class="form-floating mb-3">
+            <div class="form-floating">
               <select class="form-control bottom" name="editrol">
                 <option value="0">Analista de Compra</option>
                 <option value="1">Administrador</option>
