--- a/src/templates/productor.html
+++ b/src/templates/productor.html
@@ -151,7 +151,7 @@
                     <input class="form-control middle" id="direccion2" name="direccion2" placeholder="Av. Libertador, Edificio A, Piso 4" required="required" pattern="[A-Za-z0-9 ]{1,40}">
                     <label for="floatingInput">Dirección 2</label>
                 </div>
-                  <div class="form-floating mb-3">
+                  <div class="form-floating">
                       
                       <select id="tipo" class="form-control bottom" name="tipo">
                       {% for tipo in tipos %}
@@ -206,7 +206,7 @@
             <input class="form-control middle"  name="editdireccion2" placeholder="Av. Libertador, Edificio A, Piso 4" required="required" pattern="[A-Za-z0-9 ]{1,40}">
             <label for="floatingInput">Direccion2</label>
           </div>
-          <div class="form-floating mb-3">
+          <div class="form-floating">
                       
             <select id="tipo" class="form-control bottom" name="edittipo">
             {% for tipo in tipos %}
